<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <ImageView
        android:id="@+id/login_screen_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:importantForAccessibility="no"
        android:src="@drawable/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/already_have_account_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@id/login_screen_return_button"
        app:layout_constraintTop_toBottomOf="@id/login_screen_return_button">

        <TextView
            android:id="@+id/already_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins700"
            android:text="@string/already_have_account"
            android:textColor="#2B2B2B"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins500"
            android:text="@string/sign_in_now"
            android:textColor="#7A7A7A"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/already_have_account_text"
            app:layout_constraintTop_toBottomOf="@id/already_have_account_text"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="@id/already_have_account_box"
        app:layout_constraintTop_toBottomOf="@id/already_have_account_box">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_screen_email_input_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_bottom_nav_view_background"
            android:hint="E-mail"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_screen_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:ems="12"
                android:fontFamily="@font/poppins500"
                android:importantForAccessibility="no"
                android:inputType="textEmailAddress"
                android:textColor="#2B2B2B"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/login_screen_email_input_layout"
                app:layout_constraintTop_toTopOf="@id/login_screen_email_input_layout"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_screen_password_input_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_bottom_nav_view_background"
            android:hint="Password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_screen_email_input_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_screen_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:ems="12"
                android:fontFamily="@font/poppins500"
                android:importantForAccessibility="no"
                android:inputType="textPassword"
                android:textColor="#2B2B2B"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/login_screen_password_input_layout"
                app:layout_constraintTop_toTopOf="@id/login_screen_password_input_layout"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins500"
        android:text="@string/forgot_your_password_click_here"
        android:textColor="#AEAEB2"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/email_password_box"
        app:layout_constraintTop_toBottomOf="@id/email_password_box" />

    <TextView
        android:id="@+id/login_screen_login_button"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/linear_orange_color"
        android:fontFamily="@font/poppins700"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FCFCFC"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_screen_login_button"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins500"
        android:textSize="17sp"
        android:textColor="#2B2B2B"/>


</androidx.constraintlayout.widget.ConstraintLayout>