<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ImageView
        android:id="@+id/register_screen_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:importantForAccessibility="no"
        android:src="@drawable/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lets_start_here_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@id/register_screen_return_button"
        app:layout_constraintTop_toBottomOf="@id/register_screen_return_button">

        <TextView
            android:id="@+id/lets_start_here_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins700"
            android:text="@string/let_s_start_here"
            android:textColor="#2B2B2B"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins500"
            android:text="@string/fill_in_your_details_to_begin"
            android:textColor="#7A7A7A"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/lets_start_here_text"
            app:layout_constraintTop_toBottomOf="@id/lets_start_here_text"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="@id/lets_start_here_box"
        app:layout_constraintTop_toBottomOf="@id/lets_start_here_box">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_screen_full_name_input_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_bottom_nav_view_background"
            android:hint="Full name"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_screen_full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:ems="12"
                android:fontFamily="@font/poppins500"
                android:importantForAccessibility="no"
                android:inputType="textPersonName"
                android:textColor="#2B2B2B"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/register_screen_full_name_input_layout"
                app:layout_constraintTop_toTopOf="@id/register_screen_full_name_input_layout"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_screen_email_input_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_bottom_nav_view_background"
            android:hint="E-mail"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="@id/register_screen_full_name_input_layout"
            app:layout_constraintTop_toBottomOf="@id/register_screen_full_name_input_layout"
            android:layout_marginTop="22dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_screen_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:ems="12"
                android:fontFamily="@font/poppins500"
                android:importantForAccessibility="no"
                android:inputType="textEmailAddress"
                android:textColor="#2B2B2B"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/register_screen_email_input_layout"
                app:layout_constraintTop_toTopOf="@id/register_screen_email_input_layout"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_screen_password_input_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_bottom_nav_view_background"
            android:hint="Password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_screen_email_input_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_screen_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:ems="12"
                android:fontFamily="@font/poppins500"
                android:importantForAccessibility="no"
                android:inputType="textPassword"
                android:textColor="#2B2B2B"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/register_screen_password_input_layout"
                app:layout_constraintTop_toTopOf="@id/register_screen_password_input_layout"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/register_screen_register_button"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/linear_orange_color"
        android:fontFamily="@font/poppins700"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FCFCFC"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_screen_register_button"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins500"
        android:textSize="17sp"
        android:textColor="#2B2B2B"/>

    <TextView
        android:id="@+id/login_screen_facebook_button"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/facebook_border"
        android:fontFamily="@font/poppins500"
        android:text="Log in with Facebook"
        android:textColor="#F6F7FA"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/register_screen_register_button"
        app:layout_constraintStart_toStartOf="@id/register_screen_register_button"
        android:layout_marginTop="42dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook_icon"
        app:layout_constraintStart_toStartOf="@id/login_screen_facebook_button"
        app:layout_constraintTop_toTopOf="@id/login_screen_facebook_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/login_screen_google_button"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/google_border"
        android:fontFamily="@font/poppins500"
        android:text="Log in with Google"
        android:textColor="#2B2B2B"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/login_screen_facebook_button"
        app:layout_constraintStart_toStartOf="@id/login_screen_facebook_button"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/google_icon"
        app:layout_constraintStart_toStartOf="@id/login_screen_google_button"
        app:layout_constraintTop_toTopOf="@id/login_screen_google_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>